# robot_control_sim

./: .clang-format  .dockerignore  .gitignore  CMakeLists.txt  Makefile  README.md  plot_results.py
.github/workflows/: ci.yml
app/: main.cpp
docker/: Dockerfile  compose.yaml  entrypoint.sh
docs/superpowers/plans/: 2026-05-14-ci-tests-readme.md  2026-05-14-ros2-jazzy-v1.md  2026-05-14-ros2-jazzy-v2-docker.md  2026-05-14-ros2-jazzy-v3.md
include/: Controller.hpp  Coordinate.hpp  Robot.hpp  controller.h  coordinate.h  kalman.h  mpc.h  pid.h  robot.h  sensor.h
ros2_ws/src/robot_control_sim_ros2/: CMakeLists.txt  README.md  package.xml
ros2_ws/src/robot_control_sim_ros2/config/: params.yaml
ros2_ws/src/robot_control_sim_ros2/launch/: robot_sim.launch.py
ros2_ws/src/robot_control_sim_ros2/rviz/: robot_sim.rviz
ros2_ws/src/robot_control_sim_ros2/src/: controller_node.cpp  estimator_node.cpp  plant_node.cpp  sensor_node.cpp
ros2_ws/src/robot_control_sim_ros2/test/: test_launch.py
ros2_ws/src/robot_control_sim_ros2/urdf/: robot.urdf.xacro
src/: Controller.cpp  Robot.cpp  Sensor.cpp  mpc_depr  pid.cpp  robot.cpp
tests/: CMakeLists.txt  test_kalman.cpp  test_pid.cpp  test_robot.cpp
